# template-securite-python

./: README.md  pyproject.toml
src/: config.py
src/tp1/: main.py
src/tp1/utils/: capture.py  lib.py  report.py
src/tp2/: main.py
src/tp2/utils/: shellcode.py
src/tp3/: main.py
src/tp3/utils/: captcha.py  session.py
src/tp4/: main.py
src/tp4/utils/: config.py  decoder.py  session.py
tests/tp2/utils/: test_shellcode.py
tests/tp3/utils/: test_session.py
tests/tp4/utils/: test_decoder.py  test_session.py
